2011-12-20    <h.v.raven@googlemail.com>

	* src/level.cpp (print): changed map-call to find for constness

2011-12-18    <h.v.raven@googlemail.com>

	* src/spell.h (Spell): added get-functions
	removed generic Spell_Element classes using typedef

	* src/gtkwindow.cpp (display_spell): changed to use get-functions

2011-12-14    <h.v.raven@googlemail.com>

	* src/xmldecoder.cpp (decode_spell_resistance_): new function
	(decode_elements_): added spell resistance to decoding functions
	(decode_elements_): added description to decoding functions
	(decode_description_): new function

	* src/spell.cpp (read_level): replaced hack with tiny self-build search function

2011-12-13    <h.v.raven@googlemail.com>

	* src/spell.cpp (read_level): completed reading of input string with per level information

	* src/xmldecoder.cpp (decode_duration_): change to use the read_level of the duration class

2011-11-27    <h.v.raven@googlemail.com>

	* src/strmanip.cpp (to_int, to_uint): new functions for conversion

	* src/spell.cpp (Duration::print): modified print for per_level

	* src/xmldecoder.cpp (decode_name_): simplified function using QueryStringAttribute (todo: language support)
	(decode_saving_throw_): removed unnecesary check for type no

	* src/savingthrow.cpp (print): added print_type to the output

2011-11-25    <h.v.raven@googlemail.com>

	* src/savingthrow.cpp (print): added object to output
	(Saving_Throw): changed constructurs to initialize object_ to false

	* src/spell.h (Saving_Throw): added bool for object

2011-11-22    <h.v.raven@googlemail.com>

	* src/spell.h (Duration): new class for dismissible option
	(Spell): changed class of duration to duration

	* src/spell.cpp (Duration::print): new function

	* src/spell.h (Spell_Element): changed set function names

	* src/xmldecoder.cpp (decode_elements_): added decoder for range

	* src/spell.h (set_range): new function

	* src/token.h (Spell_Elment_Token): new token for range value
